--- a/src/components/TopBar/TopBar.css
+++ b/src/components/TopBar/TopBar.css
@@ -6,7 +6,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-size: calc(10px + 2vmin);
     color: white;
     border-bottom: 5px solid #ABCC6D;
+    margin: 0;
   }
+
+  @media only screen and (max-width: 600px) {
+    #kyzenlogo {
+        width: 90%;
+    }
+}
