--- a/src/components/CurrentDataDisplay/CurrentDataDisplay.css
+++ b/src/components/CurrentDataDisplay/CurrentDataDisplay.css
@@ -1,10 +1,10 @@
 .CurrentDataDisplay {
     display: flex;
-    justify-content: center;
+    justify-content: left;
 }
 
 .displayCard {
-    width: 50%;
+    width: 50vw;
     margin: 10px;
     font-weight: bold;
     font-size: 1.5em;
